@@ -4,6 +4,10 @@
     <glade-widget-class name="ObjectList"
                         generic-name="objectlist"
                         title="Object List" />
+    <glade-widget-class name="HyperLink"
+                        generic-name="hyperlink"
+                        title="Hyper Link" 
+                        adaptor-class="HyperLinkAdaptor"/>
     <glade-widget-class name="kiwi+ui+widgets+entry+Entry"
                         generic-name="kiwientry"
                         title="Kiwi Entry" />
@@ -40,11 +44,12 @@
   </glade-widget-classes>
 
   <glade-widget-group name="kiwi" title="Kiwi Widgets">
+    <glade-widget-class-ref name="ObjectList"/>
+    <glade-widget-class-ref name="HyperLink"/>
     <glade-widget-class-ref name="kiwi+ui+widgets+entry+Entry"/>
     <glade-widget-class-ref name="kiwi+ui+widgets+label+Label"/>
     <glade-widget-class-ref name="ProxyComboBox"/>
     <glade-widget-class-ref name="ProxyComboEntry"/>
-    <glade-widget-class-ref name="ObjectList"/>
     <glade-widget-class-ref name="kiwi+ui+widgets+checkbutton+CheckButton"/>
     <glade-widget-class-ref name="kiwi+ui+widgets+radiobutton+RadioButton"/>
     <glade-widget-class-ref name="kiwi+ui+widgets+spinbutton+SpinButton"/>
