@@ -1,5 +1,14 @@
 2006-03-06  Johan Dahlin  <jdahlin@async.com.br>
 
+	* gazpacho-plugin/kiwiwidgets.py:
+	* gazpacho-plugin/kiwiwidgets.xml:
+	* kiwi/ui/gazpacholoader.py:
+	* kiwi/ui/hyperlink.py:
+
+	Add gazpacho support for hyperlink.	
+
+2006-03-06  Johan Dahlin  <jdahlin@async.com.br>
+
 	* kiwi/component.py: 
 	(get_utility): Add limited support for zope.interfaces.
 
